@@ -1,5 +1,5 @@
 /*
- *   $Id: radvd.c,v 1.18 2005/02/15 08:32:05 psavola Exp $
+ *   $Id: radvd.c,v 1.19 2005/02/19 18:57:54 lutchann Exp $
  *
  *   Authors:
  *    Pedro Roque		<roque@di.fc.ul.pt>
@@ -357,8 +357,11 @@ void reload_config(void)
 	/* disable timers, free interface and prefix structures */
 	for(iface=IfaceList; iface; iface=iface->next)
 	{
-		dlog(LOG_DEBUG, 4, "disabling timer for %s", iface->Name);
-		clear_timer(&iface->tm);
+		if(! iface->UnicastOnly && iface->AdvSendAdvert)
+		{
+			dlog(LOG_DEBUG, 4, "disabling timer for %s", iface->Name);
+			clear_timer(&iface->tm);
+		}
 	}
 
 	iface=IfaceList; 
